--- a/Phoneword/PhonewordPage.xaml
+++ b/Phoneword/PhonewordPage.xaml
@@ -17,6 +17,7 @@
       <Entry x:Name="phoneNumberText" Text="1-855-XAMARIN" />
       <Button x:Name="translateButton" Text="Translate" Clicked="OnTranslate" />
       <Button x:Name="callButton" Text="Call" IsEnabled="false" Clicked="OnCall" />
+	  <Button x:Name="callHistoryButton" Text="Call History" IsEnabled="false" Clicked="OnCallHistory" />
     </StackLayout>
   </ContentPage.Content>
 </ContentPage>
